resolve cookie button style issue on galaxy s10

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4916,6 +4916,10 @@ body {
   .cookieConsent .btn {
     left: 63px;
   }
+
+  .cookieConsent .btn.no {
+    left: 59px;
+  }
 }
 
 @media (min-width: 414px) {
