--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4890,6 +4890,8 @@ body {
         top: 30px;
       }
       &.no {
+        left: 35px;
+        top: 30px;
         &.is-detail {
           left: 35px;
           top: 30px;
@@ -5056,6 +5058,7 @@ body {
         left: 67px;
       }
       &.no {
+        left: 67px;
         &.is-detail {
           left: 67px;
         }
@@ -5704,6 +5707,7 @@ body {
         left: 97px;
       }
       &.no {
+        left: 97px;
         &.is-detail {
           left: 97px;
         }
@@ -6048,6 +6052,7 @@ body {
         left: 107px;
       }
       &.no {
+        left: 107px;
         &.is-detail {
           left: 107px;
         }
@@ -6107,6 +6112,7 @@ body {
         left: 117px;
       }
       &.no {
+        left: 117px;
         &.is-detail {
           left: 117px;
         }
@@ -6663,6 +6669,7 @@ body {
         left: 177px;
       }
       &.no {
+        left: 177px;
         &.is-detail {
           left: 177px;
         }
