update navigation for desktop and mobile and resolve contact page style issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -581,8 +581,8 @@ body {
   width: 23px;
   height: 23px;
   position: absolute;
-  margin-left: 6px;
-  margin-top: 8px;
+  margin-left: 7px;
+  margin-top: 7px;
 }
 
 .segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item .text-item {
@@ -618,15 +618,28 @@ body {
 }
 
 .segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item:hover.hosting {
-  background-image: linear-gradient(to right bottom, rgba(20, 49, 144, 0.6), rgba(3, 5, 28, 0.7)), url(/images/web-dropdown.jpg) !important;
+  background-image: linear-gradient(to right bottom, rgba(20, 49, 144, 0.6), rgba(3, 5, 28, 0.7)), url(/images/server-box.jpg) !important;
   background-size: cover !important;
-  border: 2px solid #7436e9;
-  color: #7436e9;
-  box-shadow: 0 0 10px #7436e9;
-  text-shadow: 0 0 10px #7436e9;
+  border: 2px solid #8341FF;
+  color: #8341FF;
+  box-shadow: 0 0 10px #8341FF;
+  text-shadow: 0 0 10px #8341FF;
 }
 
 .segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item:hover.hosting .avatar-item {
+  margin-bottom: 9px;
+}
+
+.segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item:hover.wordpress {
+  background-image: linear-gradient(to right bottom, rgba(20, 49, 144, 0.6), rgba(3, 5, 28, 0.7)), url(/images/wordpress-box.jpg) !important;
+  background-size: cover !important;
+  border: 2px solid #F84DB8;
+  color: #F84DB8;
+  box-shadow: 0 0 10px #F84DB8;
+  text-shadow: 0 0 10px #F84DB8;
+}
+
+.segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item:hover.wordpress .avatar-item {
   margin-bottom: 9px;
 }
 
@@ -703,13 +716,23 @@ body {
 }
 
 .segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item:hover .avatar-item.hosting {
-  border: 2px solid #7436e9;
-  box-shadow: 0 0 10px #7436e9;
-  color: #7436e9;
+  border: 2px solid #8341FF;
+  box-shadow: 0 0 10px #8341FF;
+  color: #8341FF;
 }
 
 .segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item:hover .avatar-item.hosting i {
-  color: #7436e9;
+  color: #8341FF;
+}
+
+.segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item:hover .avatar-item.wordpress {
+  border: 2px solid #F84DB8;
+  box-shadow: 0 0 10px #F84DB8;
+  color: #F84DB8;
+}
+
+.segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item:hover .avatar-item.wordpress i {
+  color: #F84DB8;
 }
 
 .segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item:hover .avatar-item.mobile {
@@ -4641,6 +4664,14 @@ body {
     border-color: #7436e9;
   }
 
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item.hosting {
+    border-color: #8341FF;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item.wordpress {
+    border-color: #F84DB8;
+  }
+
   .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item.mobile {
     border-color: #f34cb5;
   }
@@ -5020,15 +5051,23 @@ body {
     font-size: 14px;
   }
 
-  .page .main .contact-page .contact-section .message-form .form-group {
+  .page .main .contact-page .contact-section .message-form .d-flex {
     flex-direction: column;
   }
 
-  .page .main .contact-page .contact-section .message-form .form-group .phone-form {
+  .page .main .contact-page .contact-section .message-form .d-flex .form-group:first-child {
+    margin-right: 0;
+  }
+
+  .page .main .contact-page .contact-section .message-form .d-flex .form-group.no-padding:first-child {
+    margin-top: 30px;
+  }
+
+  .page .main .contact-page .contact-section .message-form .d-flex .form-group .phone-form {
     margin-left: 0px;
   }
 
-  .page .main .contact-page .contact-section .message-form .form-group .custom-error {
+  .page .main .contact-page .contact-section .message-form .d-flex .form-group .custom-error {
     bottom: 96px;
   }
 
@@ -6036,6 +6075,18 @@ body {
 
   .page .main .contact-page .contact-section {
     margin-top: 725px;
+  }
+
+  .page .main .contact-page .contact-section .message-form .d-flex {
+    flex-direction: row;
+  }
+
+  .page .main .contact-page .contact-section .message-form .d-flex .form-group:first-child {
+    margin-right: 15px;
+  }
+
+  .page .main .contact-page .contact-section .message-form .d-flex .form-group.no-padding:first-child {
+    margin-top: 0px;
   }
 
   .page .main .login-page {
@@ -7753,10 +7804,6 @@ body {
   .page .main .contact-page .contact-section .message-form input {
     font-size: 16px;
     font-family: "Gotham Bold";
-  }
-
-  .page .main .contact-page .contact-section .message-form .form-group .field {
-    margin-right: 15px;
   }
 
   .page .main .contact-page .contact-section .message-form .form-group .phone-form .react-phone-number-input__error {
